IDI-36: Fixed high contrast themes for circles. Border is left.

--- a/style-ltie9.css
+++ b/style-ltie9.css
@@ -181,6 +181,45 @@
 
 .fl-theme-uio-by .idi-mobile-cluster-circle-colour,
 .fl-theme-uio-bw .idi-mobile-cluster-circle-colour { background-image: url('images/circles/circle-black100.png'); }
+.fl-theme-uio-yb .idi-mobile-cluster-circle-colour { background-image: url('images/circles/circle-yellow100.png'); }
+.fl-theme-uio-wb .idi-mobile-cluster-circle-colour { background-image: url('images/circles/circle-white100.png'); }
 
 .fl-theme-uio-by .idi-mobile-link:hover ~ .idi-mobile-cluster-circle,
 .fl-theme-uio-bw .idi-mobile-link:hover ~ .idi-mobile-cluster-circle { background-image: url('images/circles/circle-black106.png'); }
+.fl-theme-uio-yb .idi-mobile-link:hover ~ .idi-mobile-cluster-circle { background-image: url('images/circles/circle-yellow106.png'); }
+.fl-theme-uio-wb .idi-mobile-link:hover ~ .idi-mobile-cluster-circle { background-image: url('images/circles/circle-white106.png'); }
+
+.fl-theme-uio-by .idi-policies-cluster-circle-colour,
+.fl-theme-uio-bw .idi-policies-cluster-circle-colour { background-image: url('images/circles/circle-black70.png'); }
+.fl-theme-uio-yb .idi-policies-cluster-circle-colour { background-image: url('images/circles/circle-yellow70.png'); }
+.fl-theme-uio-wb .idi-policies-cluster-circle-colour { background-image: url('images/circles/circle-white70.png'); }
+
+.fl-theme-uio-by .idi-policies-link:hover ~ .idi-policies-cluster-circle,
+.fl-theme-uio-bw .idi-policies-link:hover ~ .idi-policies-cluster-circle { background-image: url('images/circles/circle-black76.png'); }
+.fl-theme-uio-yb .idi-policies-link:hover ~ .idi-policies-cluster-circle { background-image: url('images/circles/circle-yellow76.png'); }
+.fl-theme-uio-wb .idi-policies-link:hover ~ .idi-policies-cluster-circle { background-image: url('images/circles/circle-white76.png'); }
+
+.fl-theme-uio-by .idi-design-cluster-circle-colour,
+.fl-theme-uio-bw .idi-design-cluster-circle-colour { background-image: url('images/circles/circle-black140.png'); }
+.fl-theme-uio-yb .idi-design-cluster-circle-colour { background-image: url('images/circles/circle-yellow140.png'); }
+.fl-theme-uio-wb .idi-design-cluster-circle-colour { background-image: url('images/circles/circle-white140.png'); }
+
+.fl-theme-uio-by .idi-design-link:hover ~ .idi-design-cluster-circle,
+.fl-theme-uio-bw .idi-design-link:hover ~ .idi-design-cluster-circle { background-image: url('images/circles/circle-black147.png'); }
+.fl-theme-uio-yb .idi-design-link:hover ~ .idi-design-cluster-circle { background-image: url('images/circles/circle-yellow147.png'); }
+.fl-theme-uio-wb .idi-design-link:hover ~ .idi-design-cluster-circle { background-image: url('images/circles/circle-white147.png'); }
+
+.fl-theme-uio-by .idi-implementation-cluster-circle-colour,
+.fl-theme-uio-bw .idi-implementation-cluster-circle-colour { background-image: url('images/circles/circle-black160.png'); }
+.fl-theme-uio-yb .idi-implementation-cluster-circle-colour { background-image: url('images/circles/circle-yellow160.png'); }
+.fl-theme-uio-wb .idi-implementation-cluster-circle-colour { background-image: url('images/circles/circle-white160.png'); }
+
+.fl-theme-uio-by .idi-implementation-link:hover ~ .idi-implementation-cluster-circle,
+.fl-theme-uio-bw .idi-implementation-link:hover ~ .idi-implementation-cluster-circle { background-image: url('images/circles/circle-black166.png'); }
+.fl-theme-uio-yb .idi-implementation-link:hover ~ .idi-implementation-cluster-circle { background-image: url('images/circles/circle-yellow166.png'); }
+.fl-theme-uio-wb .idi-implementation-link:hover ~ .idi-implementation-cluster-circle { background-image: url('images/circles/circle-white166.png'); }
+
+.fl-theme-uio-yb .idi-research-clusters .idi-cluster-circle,
+.fl-theme-uio-wb .idi-research-clusters .idi-cluster-circle,
+.fl-theme-uio-by .idi-research-clusters .idi-cluster-circle,
+.fl-theme-uio-bw .idi-research-clusters .idi-cluster-circle { background-color: transparent !important; }
